Fixed navbar spacing.

--- a/css/cse101.css
+++ b/css/cse101.css
@@ -1,3 +1,6 @@
+body {
+  padding-top: 40px; /* Fixed navbar. */
+}
 .document {
   background-color: #f1f1f1;
   border-radius: 5px;
@@ -17,4 +20,9 @@
 
 .table {
   width: auto;
+}
+
+.container > .navbar .brand {
+  color: #333;
+  margin-left: 10px;
 }
